apply plugin: 'com.android.application'
apply plugin: 'com.neenbedankt.android-apt'
apply plugin: 'com.fernandocejas.frodo'
apply plugin: 'com.tmiyamon.mdicons'
apply plugin: 'me.tatarka.retrolambda'



android {
    compileSdkVersion 'Google Inc.:Google APIs:23'
    buildToolsVersion "23.0.2"

    defaultConfig {
        applicationId "net.coscolla.comicstrip"
        minSdkVersion 21
        targetSdkVersion 23
        versionCode 1
        versionName "1.0"
    }
    dataBinding {
        enabled = true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    dexOptions {
        preDexLibraries true
        javaMaxHeapSize "2g"
        incremental true
    }

    // make android studio work as java8
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

ext {
    supportLibraryVersion = '23.2.1'
    retrofitVersion = '2.0.0'
    daggerVersion = '2.0.2'
    storioVersion = '1.8.0'
    okhttpVersion = '3.2.0'
}

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    testCompile 'junit:junit:4.12'
    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
    compile "com.android.support:recyclerview-v7:$supportLibraryVersion"
    compile "com.android.support:cardview-v7:$supportLibraryVersion"
    compile "com.android.support:design:$supportLibraryVersion"

    compile 'com.github.bumptech.glide:glide:3.6.1'
    compile "com.google.android.gms:play-services-gcm:8.4.0"

    compile 'com.commit451:PhotoView:1.2.4'

    compile 'com.jakewharton:butterknife:7.0.1'
    compile 'com.jakewharton.timber:timber:4.1.0'


    compile 'org.parceler:parceler-api:1.0.4'
    apt 'org.parceler:parceler:1.0.4'

    compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
    compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
    compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
    compile "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"

    compile 'com.annimon:stream:1.0.8'


    compile "com.google.dagger:dagger:$daggerVersion"
    apt "com.google.dagger:dagger-compiler:$daggerVersion"
    provided 'javax.annotation:jsr250-api:1.0'

    compile 'io.reactivex:rxjava:1.1.0'
    compile 'io.reactivex:rxandroid:1.1.0'
    compile "com.pushtorefresh.storio:sqlite:$storioVersion"
    compile "com.pushtorefresh.storio:sqlite-annotations:$storioVersion"
    apt "com.pushtorefresh.storio:sqlite-annotations-processor:$storioVersion"
}

mdicons {
    defcolor 'mycolor', '#9804d9'

    assets {
        icons {
            colors "mycolor", "white"
            sizes  "36dp"
            names  "favorite", "favorite_border"
        }

    }

}
